# hackathon-II-todo-app

./: .gitignore  AGENT_ASSIGNMENTS.md  BACKEND_INTEGRATION_CHECKLIST.md  BRANDING.md  CLAUDE.md  CLEANUP_REPORT.md  CODE_SNIPPETS_REFERENCE.md  DOCUMENTATION_INDEX.md  FRONTEND_MIGRATION_QUICK_START.md  FRONTEND_SCHEMA_UPDATE.md  FRONTEND_UPDATE_COMPLETE.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.txt  INTEGRATION_TEST_REPORT.md  MIGRATION_CHECKLIST.md  PHASE_1_2_COMPLETE.md  QUICK_REFERENCE.md  README.md  SCHEMA_BEFORE_AFTER.md  SCHEMA_UPDATE_SUMMARY.md  TASK_SCHEMA_MIGRATION_COMPLETE.md  frontend.pid  pyproject.toml  pytest.ini
.claude/agents/: api-agent.md  auth-agent.md  database-agent.md  frontend-agent.md  frontend-ui-upgrader.md  integration-agent.md  python-architecture-planner.md  python-code-generator.md  spec-writer.md
.claude/skills/: add_filtering_logic.md  add_sorting_logic.md  api_client.md  auth_flow.md  auth_routes.md  auth_setup.md  create_rich_ui_component.md  create_task_breakdown.md  db_connection.md  design_python_module.md  error_handling.md  generate_crud_operation.md  jwt_middleware.md  nextjs_pages.md  schema_design.md  security_validation.md  task_crud.md  ui_components.md  write_feature_spec.md
.specify/memory/: constitution.md
backend/: .env.example  pyproject.toml
backend/src/: __init__.py
backend/src/phase2/: __init__.py  config.py  database.py  main.py
backend/src/phase2/auth/: jwt.py
backend/src/phase2/handlers/: __init__.py  db_errors.py  errors.py
backend/src/phase2/middleware/: auth.py
backend/src/phase2/models/: __init__.py  task.py  user.py
backend/src/phase2/routes/: auth.py  tasks.py
backend/src/phase2/schemas/: __init__.py  auth.py  task.py
backend/src/phase2/services/: __init__.py  auth.py
backend/tests/: __init__.py
backend/tests/phase2/: conftest.py  test_task_endpoints.py
frontend/: .env.example  .env.local  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/public/: manifest.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/app/tasks/: page.tsx
frontend/src/lib/: api.ts
frontend/src/stores/: authStore.ts
history/prompts/001-phase1-console-app/: 0001-create-phase-1-console-app-specification.spec.prompt.md  0002-create-phase-1-technical-plan.plan.prompt.md  0003-generate-phase-1-task-breakdown.tasks.prompt.md  0004-analyze-phase-1-artifacts-consistency.misc.prompt.md  0005-implement-phase1-complete-todo-app.green.prompt.md
history/prompts/002-user-auth/: 0001-implement-phase-1-setup-complete.green.prompt.md  001-complete-auth-system-specification.spec.prompt.md  001-revamp-dashboard-ui-professional.green.prompt.md  002-clarify-auth-system-specification.clarify.prompt.md  002-enterprise-black-green-redesign.green.prompt.md  003-plan-authentication-system-architecture.plan.prompt.md  003-professional-branding-logo-favicon.green.prompt.md  004-branding-structure-correction.green.prompt.md  004-generate-implementation-tasks.tasks.prompt.md  005-favicon-format-fix.green.prompt.md  005-fix-backend-import-errors.red.prompt.md  006-logo-header-update.green.prompt.md  007-pre-deployment-cleanup.green.prompt.md
history/prompts/constitution/: 001-create-5-phase-todo-constitution.constitution.prompt.md
history/prompts/general/: 001-update-task-schema.general.prompt.md
specs/001-phase1-console-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-phase1-console-app/checklists/: requirements.md
specs/001-phase1-console-app/contracts/: cli-contract.md  models-contract.md  task-manager-contract.md  ui-contract.md
specs/002-user-auth/: ANALYSIS.md  plan.md  spec.md  tasks.md
specs/002-user-auth/checklists/: requirements.md
src/phase1/: __init__.py  cli.py  main.py  models.py  task_manager.py  ui.py
tests/phase1/: conftest.py
tests/phase1/unit/: test_models.py  test_task_manager.py
tests/phase2/: test_auth.py
