# Task: T002
# Spec: specs/001-phase1-console-app/spec.md#technical-constraints
# Purpose: Python project configuration with UV package manager

[project]
name = "todo-app-phase1"
version = "0.1.0"
description = "Phase 1: In-memory Python console Todo app with Rich CLI interface"
requires-python = ">=3.13"
dependencies = [
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.8.0",
    "black>=24.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phase1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'
