# Phase 1 & 2: Console App + Authentication System
# Task: T002, T007-T025
# Spec: Combined Phase 1 and 2 specifications
# Purpose: Multi-phase Todo application with authentication

[project]
name = "todo-app-fullstack"
version = "0.2.0"
description = "Full Todo App with Authentication - Phase 1 & 2"
requires-python = ">=3.13"
dependencies = [
    # Phase 1: Core functionality
    "rich>=13.7.0",

    # Phase 2: Authentication & API
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "sqlmodel>=0.0.14",
    "asyncpg>=0.29.0",
    "python-jose[cryptography]>=3.3.0",
    "argon2-cffi>=21.3.0",
    "email-validator>=2.0.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "mypy>=1.8.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phase1", "src/phase2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.black]
line-length = 88
target-version = ['py313']

[tool.ruff]
line-length = 88
target-version = "py313"
select = ["E", "F", "I", "N"]
